--- a/ColumnTransformer.ipynb
+++ b/ColumnTransformer.ipynb
@@ -9,55 +9,380 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1682417602.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[1], line 7\u001b[1;36m\u001b[0m\n\u001b[1;33m    from\u001b[0m\n\u001b[1;37m        ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import numpy as numpy\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from sKlearn.impure import SimpleImputer\n",
-    "from sKlearn.preprocessing import OnehotEncoder\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
     "\n",
-    "from sKlearn.preprocessing"
+    "from sklearn.preprocessing import OrdinalEncoder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "df =pd.read_csv(\"C:\\\\Users\\\\ADMIN\\\\Desktop\\\\New folder\\\\covid_toy.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>fever</th>\n",
+       "      <th>cough</th>\n",
+       "      <th>city</th>\n",
+       "      <th>has_covid</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>60</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>42</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>31</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>65</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Mumbai</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>51</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>Strong</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>20</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Bangalore</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>Strong</td>\n",
+       "      <td>Mumbai</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>Strong</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    age  gender  fever   cough       city has_covid\n",
+       "0    60    Male  103.0    Mild    Kolkata        No\n",
+       "1    27    Male  100.0    Mild      Delhi       Yes\n",
+       "2    42    Male  101.0    Mild      Delhi        No\n",
+       "3    31  Female   98.0    Mild    Kolkata        No\n",
+       "4    65  Female  101.0    Mild     Mumbai        No\n",
+       "..  ...     ...    ...     ...        ...       ...\n",
+       "95   12  Female  104.0    Mild  Bangalore        No\n",
+       "96   51  Female  101.0  Strong    Kolkata       Yes\n",
+       "97   20  Female  101.0    Mild  Bangalore        No\n",
+       "98    5  Female   98.0  Strong     Mumbai        No\n",
+       "99   10  Female   98.0  Strong    Kolkata       Yes\n",
+       "\n",
+       "[100 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age           0\n",
+       "gender        0\n",
+       "fever        10\n",
+       "cough         0\n",
+       "city          0\n",
+       "has_covid     0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.isnull().sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sKlearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "x_train , x_test, y_train, y_test = train_test_split(df.drop)(\n",
-    "    columns =['has_covid']),df['has_covid'], test_size =0.2)\n",
-    ")"
+    "x_train , x_test, y_train, y_test = train_test_split(df.drop(\n",
+    "    columns =['has_covid']),df['has_covid'], test_size =0.2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>fever</th>\n",
+       "      <th>cough</th>\n",
+       "      <th>city</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Delhi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>83</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Kolkata</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Kolkata</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>90</th>\n",
+       "      <td>59</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>Strong</td>\n",
+       "      <td>Delhi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>51</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Bangalore</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>65</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Mumbai</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73</th>\n",
+       "      <td>34</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>Strong</td>\n",
+       "      <td>Kolkata</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>42</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>Mild</td>\n",
+       "      <td>Delhi</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>79</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Strong</td>\n",
+       "      <td>Kolkata</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68</th>\n",
+       "      <td>54</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>Strong</td>\n",
+       "      <td>Kolkata</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>80 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    age  gender  fever   cough       city\n",
+       "30   15    Male  101.0    Mild      Delhi\n",
+       "83   17  Female  104.0    Mild    Kolkata\n",
+       "59    6  Female  104.0    Mild    Kolkata\n",
+       "90   59  Female   99.0  Strong      Delhi\n",
+       "14   51    Male  104.0    Mild  Bangalore\n",
+       "..  ...     ...    ...     ...        ...\n",
+       "4    65  Female  101.0    Mild     Mumbai\n",
+       "73   34    Male   98.0  Strong    Kolkata\n",
+       "2    42    Male  101.0    Mild      Delhi\n",
+       "94   79    Male    NaN  Strong    Kolkata\n",
+       "68   54  Female  104.0  Strong    Kolkata\n",
+       "\n",
+       "[80 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_train"
    ]
@@ -68,16 +393,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Manually type output"
+    "# Manually type output"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(80, 1)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "s1 = simpleEnputer(strategy = 'main')\n",
+    "# adding simple imputer to fever column\n",
+    "si = SimpleImputer(strategy = 'mean')\n",
     "x_train_fever = si.fit_transform(x_train[['fever']])\n",
     "\n",
     "#also the test data\n",
@@ -88,49 +425,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(80, 1)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# ordinal Encoding-->cough\n",
     "\n",
     "\n",
-    "oe = ordinalEncoder(categories =[['Mild', 'strong']])\n",
+    "oe = OrdinalEncoder(categories =[['Mild', 'Strong']])\n",
     "x_train_cough = oe.fit_transform(x_train[['cough']])\n",
     "\n",
     "\n",
-    "# also the yest data\n",
+    "# also the test data\n",
     "\n",
-    "x_test_cough = oe.fit_transform(x_test[['couugh']])\n",
+    "x_test_cough = oe.fit_transform(x_test[['cough']])\n",
     "\n",
     "x_train_cough.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(80, 4)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# onehotencoding---->genderr,city\n",
     "\n",
-    "ohe =oneHotEncoder(drop= 'first',sparse_output= False)\n",
-    "x_train_gender_city =ohe.fit_transform(x_train[['gender,'city']])'\n",
+    "ohe =OneHotEncoder(drop= 'first',sparse_output= False)\n",
+    "x_train_gender_city =ohe.fit_transform(x_train[['gender','city']])\n",
     "\n",
     "\n",
     "# also the test data\n",
-    "x_test_gender_city = ohe.fit_transform(x_test[['gender','city']])\n"
+    "x_test_gender_city = ohe.fit_transform(x_test[['gender','city']])\n",
+    "\n",
+    "x_train_gender_city.shape\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Extrating age\n",
     "\n",
-    "x_train_age = x_train.drop(columns=\n",
+    "x_train_age = x_train.drop(columns =\n",
     "                           ['gender','fever','cough','city']).values\n",
     "\n",
     "\n",
@@ -141,20 +502,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(80, 1)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x_train_age.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "By the help of column Transformer"
+    "x_train_transformed =np.concatenate((x_train_age , x_train_fever ,\n",
+    "                                     x_train_gender_city ,\n",
+    "                                     x_train_cough) , axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(80, 7)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x_train_transformed.shape"
    ]
   },
   {
@@ -163,17 +557,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sKlearn.compose import ColumnTransformer   # this is a import columnTransformer\n",
+    "# By the help of column Transformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer   # this is how to import columnTransformer\n",
     "\n",
     "transformer = ColumnTransformer(transformers=[\n",
-    "    ('tnf1',SimpleImputer(),['fever']),  # in a fever column by the help of s1 we\n",
+    "    ('tnf1',SimpleImputer(),['fever']),  # in a fever column by the help of si we\n",
     "    # fill the missing values by mean,median,mode,\n",
     "\n",
-    "    ('tnf2',OrdinalEncoder(categories=[['Mild','Strong']]),['cough'])  # by this process\n",
+    "    ('tnf2',OrdinalEncoder(categories=[['Mild','Strong']]),['cough']),  # by this process\n",
     "    # we encode our data\n",
-    "    ('tnf3',onHotEncoder(sparse_output=False,drop='first'),['gender','city'])\n",
+    "    ('tnf3',OneHotEncoder(sparse_output=False,drop='first'),['gender','city'])],\n",
+    "    remainder ='passthrough') # remainder = passthrough ==>\n",
+    "# it means rest of all the columns remains same.\n",
     "    \n",
-    "     )\n"
+    "     \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(80, 7)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "transformer.fit_transform(x_train).shape"
    ]
   },
   {
