--- a/ColumnTransformer.ipynb
+++ b/ColumnTransformer.ipynb
@@ -9,6 +9,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# columnTransformer---->\n",
+    "\n",
+    "# container[step_name , approach , column_name]\n",
+    "\n",
+    "# project--->simply way me represent\n",
+    "\n",
+    "# data---> divide x_train , x_test , y_train , y_test\n",
+    "\n",
+    "# 1-1 column---> shape --->concatinate---> output shape\n",
+    "\n",
+    "# columnTransformer---> combined--> output shape = equal"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
